--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 #imagem{
     background-image: url(./imagens/pexels-dinnow-86001860-9444476.jpg);
     width: 100%;
-    height: 35vh;
+    height: 40%;
     background-size: cover;
 }
 
